config layout bug time

--- a/css/config.css
+++ b/css/config.css
@@ -196,8 +196,8 @@ h4{
       height: 30px;
   }
     .inputTime{
-      font-size: 3.6vw;
-      width: 26.2%;
+      font-size: 3.5vw;
+      width: 26%;
     }
 
     .switch {
